--- a/index.html
+++ b/index.html
@@ -65,20 +65,21 @@
         </p>
       </div>
       <figure class="content__figure">
-        <picture loading="lazy">
-          <source
+        <picture>
+          <!-- <source
             srcset="./images/cards-1x.webp 1x, ./images/cards-2x.webp 2x"
             type="image/webp"
           />
           <source
             srcset="./images/cards-1x.avif 1x, ./images/cards-2x.avif 2x"
             type="image/avif"
-          />
+          /> -->
           <img
             class="content__picture"
             src="./images/cards-2x.png"
-            alt="Колода Oblique Strategies"
+            alt="на столе лежит телфон, ручка, цветы и маленькая черная коробка"
             srcset="./images/cards-1x.png 1x, ./images/cards-2x.png 2x"
+            loading="lazy"
           />
         </picture>
         <figcaption class="content__picture-caption">
